# basicmath

./: .gitignore  CMakeLists-pybind11.txt  CMakeLists.txt  README.md  _CMakeLists.txt  pyproject.toml
basicmath-py/basicmath/: __init__.py  prime.py
basicmath-py/tests/: test_primes.py
basicmath-py/tests/data/: prime_counts_results.csv
basicmath-src/: _basicmath.cpp  bindings-pybind11.cpp  miller_rabin.cpp  miller_rabin.hpp  py_bindings.cpp
examples/: graph_primes.py
src-basicmath/: miller_rabin.cpp
