[project]
name = "basicmath"
version = "1.0"

[build-system]
requires = [
    "scikit-build-core >=0.10",
    "nanobind >=1.3.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
# setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

wheel.expand-macos-universal-tags = true

wheel.license-files = []

[tool.scikit-build.wheel.packages]
basicmath = "basicmath-py/basicmath"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
